Fix spacing error-summary
- adjust padding surrounding

Relates to MT-168

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -248,7 +248,7 @@ label.form-label {
 
 .error-summary {
   margin-bottom: var(--form-group-spacer);
-  padding: $spacer-small $spacer-x-small;
+  padding: $spacer-xx-small $spacer-x-small;
   border-left: $border-width-regular solid var(--color-error);
 
   h2 {
